# example-plugin

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  entrypoint.sh  test_server.py
cross-compile/: Dockerfile  docker_cross_compile.sh
docker-load-cache/: Dockerfile  build-load-cache.sh  odc-api-plugins.json
docker-load-collection/: Dockerfile  build-load-collection.sh  config.json  entrypoint.sh
include/: ExamplePlugin.h  FileApi.h  HerePlugin.h  HivemapperApi.h  LandmarksApi.h  PositionApi.h
lib/hive-cpp/: CMakeLists.txt
lib/hive-cpp/include/: PositionApi.h
lib/hive-cpp/include/hivecpp/: FileApi.h  LandmarksApi.h  PositionApi.h  Utils.h
lib/hive-cpp/src/: FileApi.cpp  LandmarksApi.cpp  PositionApi.cpp  Utils.cpp
lib/nlohmann/: json.hpp
src/: CMakeLists.txt  ExamplePlugin.cpp  FileApi.cpp  HerePlugin.cpp  HivemapperApi.cpp  LandmarksApi.cpp  PositionApi.cpp  Utils.cpp
